--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,10 @@ header {
   color: var(--accent-color);
 }
 
+.link {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .site-nav .link.current {
   color: var(--accent-color);
 }
@@ -134,6 +138,9 @@ header {
 }
 
 .cont-mail {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   display: flex;
   align-items: center;
   margin-right: 50px;
@@ -147,6 +154,8 @@ header {
 }
 
 .cont-tel {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   display: flex;
   align-items: center;
   text-decoration: none;
@@ -212,6 +221,8 @@ header {
 }
 
 .button {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   min-width: 200px;
   padding: 10px 25px;
   border-radius: 4px;
@@ -339,6 +350,7 @@ header {
 }
 
 .social-link-team {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: #afb1b8;
   width: 44px;
   height: 44px;
@@ -362,6 +374,7 @@ header {
   justify-content: space-between;
 }
 .partners-link-logo {
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -378,6 +391,10 @@ header {
 .partners-link-logo:hover,
 .partners-link-logo:focus {
   border-color: #2196f3;
+}
+
+.partners-logo {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .partners-link-logo:hover .partners-logo,
@@ -429,6 +446,7 @@ header {
 }
 .address-mail,
 .address-tel {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   font-family: Roboto;
   font-style: normal;
   text-decoration: none;
@@ -470,6 +488,8 @@ header {
 }
 
 .footer-social-link {
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: #ffffff;
   width: 44px;
   height: 44px;
@@ -510,11 +530,13 @@ header {
 }
 
 .portfolio-button {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   min-width: 73px;
   padding: 6px 22px;
   border-radius: 4px;
 
-  font-family: Roboto, sans-serif;
+  font-family: 'Roboto', sans-serif;
   cursor: pointer;
   text-decoration: none;
   color: var(--title-text-color);
@@ -553,8 +575,43 @@ header {
 }
 
 .portfolio-link {
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   display: block;
   text-decoration: none;
+}
+
+.overley-portfolio {
+  position: relative;
+  overflow: hidden;
+}
+
+.overley-portfolio-link {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;
+  
+  letter-spacing: 0.03em;
+  
+  color: #FFFFFF;
+  background: rgba(33, 150, 243, 0.9);
+
+  padding: 63px 24px;
+  overflow: auto;
+}
+
+.overley-portfolio:hover .overley-portfolio-link {
+  transform: translateY(0%);
 }
 
 .img-text {
